<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="hu.brazzo.andrd.login.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/layoutBorder"
        android:weightSum="1">

        <ImageView
            android:layout_width="290dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="LOGO"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="20dp"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/loginTitle"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:alpha="0.8"
            android:background="@drawable/background_empty_btn"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/loginSignUpButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:gravity="center"
            android:onClick="@{viewModel::onLoginClicked}"
            android:text="@string/loginSignInLabel"
            android:textSize="18dp" />

    </LinearLayout>

</layout>